Added footer fonts

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </div>
         <div class="footer-bottom">
           <p class="footer-links" style="text-align: center">
-            <a href="#" class="link-1">Home</a>
+            <a href="#postLoader" class="link-1">Home</a>
 
             <a href="#about">About</a>
 
