Added footer icon

--- a/index.html
+++ b/index.html
@@ -463,8 +463,10 @@
               </div>
             </div>
           </div>
+          
         </div>
-        <div class="footer-bottom">
+        <!--
+          <div class="footer-bottom">
           <p class="footer-links" style="text-align: center">
             <a href="#postLoader" class="link-1">Home</a>
 
@@ -481,6 +483,12 @@
             <a href="#contact">Contact</a>
           </p>
         </div>
+        -->
+
+        <div id="totop-icon">
+          <a href="#postLoader" uk-totop></a>
+        </div>
+
       </footer>
     </div>
     <!--Team section ends-->
