--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 uk-toggle="target: #toggle-abt; animation: uk-animation-slide-top"
                 class="toggle-text self"
               >
-                ..toggle
+              <b>..toggle</b>
               </span>
             </p>
           </div>
