Event text added

--- a/index.html
+++ b/index.html
@@ -173,7 +173,13 @@
         <div class="event-container">
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Speaker 1
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
@@ -183,7 +189,13 @@
           </div>
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Speaker 2
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
@@ -193,7 +205,13 @@
           </div>
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Tech CSE Event 1
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
@@ -203,7 +221,13 @@
           </div>
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Tech CSE Event 2
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
@@ -213,7 +237,13 @@
           </div>
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Tech CSE Event 3
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
@@ -223,7 +253,13 @@
           </div>
           <div class="flip-card">
             <div class="flip-card-inner">
-              <div class="flip-card-front glowing"></div>
+              <div class="flip-card-front glowing">
+                <div class="flip-card-front-text">
+                  <span>
+                    Tech ECE Event 1
+                  </span>
+                </div>
+              </div>
               <div class="flip-card-back">
                 <h1>John Doe</h1>
                 <p>Architect & Engineer</p>
