Navbar On Active Underline

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                   ><img src="" alt=""
                 /></a>
                 <ul class="uk-navbar-nav">
-                  <li><a class="cp-tag" href="#postLoader">Home</a></li>
-                  <li><a class="cp-tag" href="#about">About</a></li>
-                  <li><a class="cp-tag" href="#event">Events</a></li>
-                  <li><a class="cp-tag" href="#timeline">Timeline</a></li>
-                  <li><a class="cp-tag" href="#team">Team</a></li>
-                  <li><a class="cp-tag" href="#sponsors">Sponsors</a></li>
-                  <li><a class="cp-tag" href="#contact">Contact</a></li>
+                  <li id="ni-1" onclick="setActive(1)" class="active"><a class="cp-tag" href="#postLoader">Home</a></li>
+                  <li id="ni-2" onclick="setActive(2)"><a class="cp-tag" href="#about">About</a></li>
+                  <li id="ni-3" onclick="setActive(3)"><a class="cp-tag" href="#event">Events</a></li>
+                  <li id="ni-4" onclick="setActive(4)"><a class="cp-tag" href="#timeline">Timeline</a></li>
+                  <li id="ni-5" onclick="setActive(5)"><a class="cp-tag" href="#team">Team</a></li>
+                  <li id="ni-6" onclick="setActive(6)"><a class="cp-tag" href="#sponsors">Sponsors</a></li>
+                  <li id="ni-7" onclick="setActive(7)"><a class="cp-tag" href="#contact">Contact</a></li>
                 </ul>
               </div>
             </nav>
