Footer Fixes and Contact Updated

--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
       <!--About section ends-->
 
       <!--Event section begins-->
-
       <div id="event" uk-scrollspy="cls:uk-animation-fade">
         <div style="text-align: center; width: 100%">
           <span class="sectionHeadW">Events</span>
@@ -410,18 +409,20 @@
             </p>
           </div>
 
-          <div class="name">
-            <div class="btn ph-btn" style="float: left">
-              <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+          <div class="contact-row">
+            <div class="name">
+              <div class="btn ph-btn" style="float: left">
+                <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+              </div>
+              <p>Shwetank : +91 9852244157</p>
             </div>
-            <p style="display: flex">Shwetank : +91 7011528526</p>
-          </div>
-
-          <div class="name">
-            <div class="btn ph-btn" style="float: left">
-              <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+  
+            <div class="name">
+              <div class="btn ph-btn" style="float: left">
+                <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+              </div>
+              <p>Priyanjali : +91 7011528526</p>
             </div>
-            <p style="display: flex">Priyanjali : +91 7011528526</p>
           </div>
         </div>
 
