--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
   <title>Xenith 2022</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/static/css/uikit.min.css" />
+  <link rel="stylesheet" href="static/css/uikit.min.css" />
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/static/css/style.css" />
-  <link rel="stylesheet" href="/static/css/about.css" />
-  <link rel="stylesheet" href="/static/css/scroll.css" />
-  <link rel="stylesheet" href="/static/css/timeline.css" />
-  <link rel="stylesheet" href="/static/css/sponsor.css" />
-  <link rel="stylesheet" href="/static/css/team.css" />
-  <link rel="stylesheet" href="/static/css/footer.css" />
-  <link rel="stylesheet" href="/static/css/navbar.css" />
-  <link rel="stylesheet" href="/static/css/event.css" />
+  <link rel="stylesheet" href="static/css/style.css" />
+  <link rel="stylesheet" href="static/css/about.css" />
+  <link rel="stylesheet" href="static/css/scroll.css" />
+  <link rel="stylesheet" href="static/css/timeline.css" />
+  <link rel="stylesheet" href="static/css/sponsor.css" />
+  <link rel="stylesheet" href="static/css/team.css" />
+  <link rel="stylesheet" href="static/css/footer.css" />
+  <link rel="stylesheet" href="static/css/navbar.css" />
+  <link rel="stylesheet" href="static/css/event.css" />
   <!--Lottie player-->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <!-- UIkit JS -->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="static/js/main.js"></script>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="static/favicon/favicon.ico" type="image/x-icon" />
@@ -42,9 +43,9 @@
   <div id="postLoader" class="uk-hidden">
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
-      <img src="./wallpaperflare.com_wallpaper (1).jpg" alt="" id="1" />
+      <img src="./wallpaperflare.com_wallpaper (1).jpg" class="active" />
       <!--Hidden For Pc-->
-      <img src="static/img/lottie_mb.gif" class="hidden lottie-bg" alt="" id="1" />
+      <img src="./wallpaperflare.com_wallpaper (1).jpg" class="hidden lottie-bg" alt="" id="1" />
 
       <!--Hidden For Phone-->
       <div class="uk-position-top active" uk-scrollspy="cls:uk-animation-fade">
@@ -99,7 +100,7 @@
     <div id="about" uk-scrollspy="cls:uk-animation-fade"
       style="background:url('./static/img/about/91656.jpg')  repeat fixed 100%;background-size: 150% 100%;color: whitesmoke;background-attachment: fixed;">
       <div style="text-align: center; width: 100%">
-        <span class="sectionHead">About</span>
+        <span class="sectionHead" style="color: whitesmoke;">About</span>
         <div class="about-container">
           <p class="uk-text-justify uk-text-large section-text">
             In the last few years, we have come to terms with the fact that
