--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="static/js/main.js"></script>
+  
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="static/favicon/favicon.ico" type="image/x-icon" />
@@ -78,7 +78,7 @@
       <div class="hidden nav-mb">
         <nav role="navigation">
           <div id="menuToggle">
-            <input type="checkbox" />
+            <input id="menuclose" type="checkbox" />
             <span></span>
             <span></span>
             <span></span>
@@ -439,6 +439,7 @@
   </div>
   <!--Team section ends-->
   <!--Sponsor section begins-->
+  <script src="static/js/main.js"></script>
 </body>
 <script src="/static/js/main.js"></script>
 
