--- a/index.html
+++ b/index.html
@@ -244,63 +244,62 @@
             <span class="sectionHead">Timeline</span>
           </div>
         </div>
-        <div class="timeline-container">
+        <div class="timeline ">
           <ul>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    event -1
+                  </h2>
+                </blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Earum corporis pariatur facere inventore ab
+              </div>
             </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    event -1
+                  </h2>
+                </blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Earum corporis pariatur facere inventore ab odit nam aut
+                doloribus.
+              </div>
             </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    event -1
+                  </h2>
+                </blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Earum corporis pariatur facere inventore ab odit nam aut
+                doloribus.
+              </div>
             </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
-            </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
-            </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
-            </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
-            </li>
-            <li class="timeline-content">
-              <h3 class="timeline-content__title">Event 1</h3>
-              <p class="timeline-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis
-                minima molestiae labore, exercitationem delectus?</p>
-              <span class="circle"></span>
-              <span class="timeline-content__date">Sample Date</span>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    event -1
+                  </h2>
+                </blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Earum corporis pariatur voluptate, excepturi odit nam aut
+                doloribus.
+              </div>
             </li>
           </ul>
         </div>
