--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Favicon -->
 <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
 
-<body class="parallax">
+<body style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;">
   <!--Pre Loader-->
   <div id="preLoader">
     <div class="uk-position-center">
