--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Favicon -->
 <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
 
-<body style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;">
+<body>
   <!--Pre Loader-->
   <div id="preLoader">
     <div class="uk-position-center">
@@ -44,7 +44,8 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden">
+  <div id="postLoader" class="uk-hidden"
+    style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;">
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
       <img src="./wallpaperflare.com_wallpaper (1).jpg" class="active" />
