--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div id="postLoader" class="uk-hidden"
-    style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;">
+    style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;background-size: cover;">
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
       <img src="./wallpaperflare.com_wallpaper (1).jpg" class="active" />
@@ -606,7 +606,7 @@
   </div>
   <!--Team section ends-->
   <!--Sponsor section begins-->
-  <script src="static/js/main.js"></script>
+  <script src="./static/js/main.js"></script>
 </body>
 
 
