--- a/index.html
+++ b/index.html
@@ -535,23 +535,20 @@
           </p>
         </div>
 
-        <div class="contact-row">
-          <div class="name">
-            <div class="btn ph-btn" style="float: left">
-              <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
-            </div>
-            <p>Shwetank : +91 9852244157</p>
+        <div class="name">
+          <div class="btn ph-btn" style="float: left">
+            <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
+          <p style="display: flex">Shwetank : +91 9852244157</p>
+        </div>
 
-          <div class="name">
-            <div class="btn ph-btn" style="float: left">
-              <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
-            </div>
-            <p>Priyanjali : +91 7011528526</p>
+        <div class="name">
+          <div class="btn ph-btn" style="float: left">
+            <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
+          <p style="display: flex">Priyanjali : +91 7983760053</p>
         </div>
       </div>
-
       <div class="footer-right">
         <p class="footer-company-about">
           <span class="uk-text-center uk-text-large">Our Socials</span>
@@ -581,7 +578,7 @@
           </div>
         </div>
       </div>
-      <!--
+      
           <div class="footer-bottom">
           <p class="footer-links" style="text-align: center">
             <a href="#postLoader" class="link-1">Home</a>
@@ -599,7 +596,7 @@
             <a href="#contact">Contact</a>
           </p>
         </div>
-        -->
+       
 
       <div id="totop-icon">
         <a href="#postLoader" uk-totop></a>
