--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </div>
   </div>
 
-  <div id="postLoader" class="uk-hidden" style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;background-size: cover;">
+  <div id="postLoader" class="uk-hidden"
+    style="background: url('./static/img/team/wallpaperflare.com_wallpaper.jpg') repeat fixed 100%;background-size: cover;">
     <div class="uk-position-relative" id="pos-rel-1">
       <!--Hidden For Phone-->
       <video autoplay muted loop id="myVideo" style="width: 100vw;height: 100vh;object-fit: cover;">
@@ -574,7 +575,7 @@
           </div>
         </div>
       </div>
-      
+      <!--       
           <div class="footer-bottom">
           <p class="footer-links" style="text-align: center">
             <a href="#postLoader" class="link-1">Home</a>
@@ -591,8 +592,8 @@
 
             <a href="#contact">Contact</a>
           </p>
-        </div>
-       
+        </div> -->
+
 
       <div id="totop-icon">
         <a href="#postLoader" uk-totop></a>
