Read more fix in About Section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
               reasonable.
             </span>
             <span data-uk-toggle="{target:'.my-class'}"
-              uk-toggle="target: #toggle-abt; animation: uk-animation-slide-top" class="toggle-text self">
+              uk-toggle="target: #toggle-abt; animation: uk-animation-slide-top" 
+              class="toggle-text more self"
+              id="readtoggle"
+              onclick="toggleAbout()"
+              >
               ..Read More
             </span>
           </p>
