--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     </div>
 
     <!--About section begins-->
-    <div id="about" uk-scrollspy="cls:uk-animation-fade"
-      style="background:url('./static/img/about/91656.jpg')  repeat fixed 100%;background-size: 150% 100%;color: whitesmoke;">
+    <div id="about" uk-scrollspy="cls:uk-animation-fade">
       <div style="text-align: center; width: 100%">
         <span class="sectionHead" style="color: whitesmoke;">About</span>
         <div class="about-container">
