--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="static/favicon/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+  <link rel="manifest" href="static/favicon/site.webmanifest">
 </head>
 
 <body>
