Team and sponsor section edited

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="uk-position-relative teamh" id="team" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
-          <span class="sectionHead">Team</span>
+          <span class="sectionHead">Organising team</span>
         </div>
       </div>
       <main style="margin-bottom:20vh ;">
